@@ -11,5 +11,9 @@ pids
 logs
 results
 
+dist
 npm-debug.log
 node_modules
+bower_components
+
+src/libs
