@@ -10,7 +10,7 @@
 
   <!-- Application styles. -->
   <!-- build:[href] /styles.min.css -->
-  <link rel="stylesheet" href="/app/styles/index.css">
+  <link rel="stylesheet" href="/js/apps/discovery/styles/index.css">
   <!-- /build -->
 </head>
 
@@ -20,7 +20,7 @@
 
   <!-- Application source. -->
   <!-- build:[src] /source.min.js -->
-  <script data-main="/app/main" src="/vendor/bower/requirejs/require.js"></script>
+  <script data-main="./js/apps/discovery/main" src="./libs/require.js"></script>
   <!-- /build -->
 </body>
 
